Parametric experimental design

--- a/tests/ftuworkflow.ipynb
+++ b/tests/ftuworkflow.ipynb
@@ -86,6 +86,9 @@
     "from ftuutils.base import FTUDelaunayGraph \n",
     "#Set edge weights based on orientation with respect to conductivity tensor\n",
     "conductivity_tensor = np.array([1.2,0.9,0.5]) #Fibre sheet normal\n",
+    "#Parameterised conductivity tensor can also be provided. \n",
+    "#These values can be set at the time of creating an experiment\n",
+    "#conductivity_tensor = np.array(['Df','Ds','Dn'],dtype=str) #Fibre sheet normal\n",
     "g = FTUDelaunayGraph(points,\"APN\",conductivity_tensor)"
    ]
   },
@@ -213,7 +216,13 @@
     "G = g.getGraph()\n",
     "\n",
     "#Call the FTU composition logic to create a FTU with above information\n",
-    "composer = g.composeCompositePHS(G,phstypes,phsdata)"
+    "composer = g.composeCompositePHS(G,phstypes,phsdata)\n",
+    "#The above call will create a composite phs, whose parameters are substituted in the final\n",
+    "#expression. Use this approach when the PHS parameters will not be changed to explored in the experiments\n",
+    "#When experiments with differing phs parameters need to created, the composite PHS\n",
+    "#can be created such that the parameters are not substituted at build time but resolved at runtime\n",
+    "#For such approaches use\n",
+    "composer = g.composeCompositePHS(G,phstypes,phsdata,substituteParameters=False)"
    ]
   },
   {
@@ -265,14 +274,19 @@
     "For instance, in the above case\n",
     "\n",
     "input is `i_1`\n",
+    "\n",
     "the states are `Tai, Ta, u, v`\n",
+    "\n",
     "However since states are associated with cells/graph nodes. They need to be prefixed with their node number, for instance\n",
     "`node[1].Ta`\n",
     "\n",
     "The above refers to state value `Ta`, belonging to node[1], here `1` is the label assigned to the node in the graph generation process.\n",
     "\n",
+    "Similarly if the composite PHS is composed such that the individual phs parameters are not substituted at composition time, those parameters are also made available using the above syntax, for instance\n",
+    "`node[3].eps0`\n",
+    "\n",
     "Where there are more than one celltypes, say `APN`, `FHN`...\n",
-    "The states names are prefixed by the celltype, as `APN_Ta,APN_u`, `FHN_u, FHN_v`\n",
+    "The states names and phs parameter names are prefixed by the celltype, as `APN_Ta,APN_u`, `FHN_u, FHN_v`\n",
     "\n",
     "Below we create a single experiment, where the boundary cells are stimulated with a current of `0.5` units between `100<t<110` time units."
    ]
@@ -307,7 +321,14 @@
     "exptdesigned = SimulationExperiment(composer)\n",
     "\n",
     "#Add experiments - Provide an experiment name, simulation time extent [start,stop, numsteps(int)/stepsize(float <=1)], stimulus logic\n",
-    "exptdesigned.addExperiment('test',[0,400,400],expt1)"
+    "exptdesigned.addExperiment('test',[0,400,400],expt1)\n",
+    "#For experiments that require parameters\n",
+    "pblock = \"\"\"\n",
+    "Df = 1.5\n",
+    "Ds = 0.9\n",
+    "Dn = 0.7\n",
+    "\"\"\"\n",
+    "#exptdesigned.addExperiment('test',[0,400,400],expt1,parameterblock=pblock)"
    ]
   },
   {
