Handle setting multiple node values

--- a/tests/ftuworkflow.ipynb
+++ b/tests/ftuworkflow.ipynb
@@ -283,10 +283,12 @@
     "The above refers to state value `Ta`, belonging to node[1], here `1` is the label assigned to the node in the graph generation process.\n",
     "\n",
     "Similarly if the composite PHS is composed such that the individual phs parameters are not substituted at composition time, those parameters are also made available using the above syntax, for instance\n",
-    "`node[3].eps0`\n",
+    "`node[3].eps0`.\n",
     "\n",
     "Where there are more than one celltypes, say `APN`, `FHN`...\n",
-    "The states names and phs parameter names are prefixed by the celltype, as `APN_Ta,APN_u`, `FHN_u, FHN_v`\n",
+    "The states names and phs parameter names are prefixed by the celltype, as `APN_Ta,APN_u`, `FHN_u, FHN_v`.\n",
+    "\n",
+    "To apply a variation to all nodes, the special operator `*` can be used. For instance, `node[*].Ta = 5.0` will set the state value `Ta` for all nodes to `5.0`.\n",
     "\n",
     "Below we create a single experiment, where the boundary cells are stimulated with a current of `0.5` units between `100<t<110` time units."
    ]
