Parametric expt design example and bug fixes

--- a/tests/ftuworkflow.ipynb
+++ b/tests/ftuworkflow.ipynb
@@ -88,7 +88,7 @@
     "conductivity_tensor = np.array([1.2,0.9,0.5]) #Fibre sheet normal\n",
     "#Parameterised conductivity tensor can also be provided. \n",
     "#These values can be set at the time of creating an experiment\n",
-    "#conductivity_tensor = np.array(['Df','Ds','Dn'],dtype=str) #Fibre sheet normal\n",
+    "conductivity_tensor = np.array(['Df','Ds','Dn'],dtype=str) #Fibre sheet normal\n",
     "g = FTUDelaunayGraph(points,\"APN\",conductivity_tensor)"
    ]
   },
@@ -216,7 +216,9 @@
     "G = g.getGraph()\n",
     "\n",
     "#Call the FTU composition logic to create a FTU with above information\n",
-    "composer = g.composeCompositePHS(G,phstypes,phsdata)\n",
+    "\n",
+    "#composer = g.composeCompositePHS(G,phstypes,phsdata)\n",
+    "\n",
     "#The above call will create a composite phs, whose parameters are substituted in the final\n",
     "#expression. Use this approach when the PHS parameters will not be changed to explored in the experiments\n",
     "#When experiments with differing phs parameters need to created, the composite PHS\n",
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,8 +331,9 @@
     "Df = 1.5\n",
     "Ds = 0.9\n",
     "Dn = 0.7\n",
+    "node[1].eps0 = 1.0\n",
     "\"\"\"\n",
-    "#exptdesigned.addExperiment('test',[0,400,400],expt1,parameterblock=pblock)"
+    "exptdesigned.addExperiment('test',[0,400,400],expt1,parameterblock=pblock) #Note that using the same experiment name will overwrite previous record"
    ]
   },
   {
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
