Pre cellml handling merge

--- a/tests/ftuworkflow.ipynb
+++ b/tests/ftuworkflow.ipynb
@@ -89,7 +89,11 @@
     "#Parameterised conductivity tensor can also be provided. \n",
     "#These values can be set at the time of creating an experiment\n",
     "conductivity_tensor = np.array(['Df','Ds','Dn'],dtype=str) #Fibre sheet normal\n",
-    "g = FTUDelaunayGraph(points,\"APN\",conductivity_tensor)"
+    "#g = FTUDelaunayGraph(points,\"APN\",conductivity_tensor)\n",
+    "from ftuutils import graphutils\n",
+    "g = graphutils.Lattice2D(5,5,\"APN\")\n",
+    "g.setFibreConductivity(1.2)\n",
+    "g.setSheetConductivity(0.9)    \n"
    ]
   },
   {
@@ -108,20 +112,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected input nodes [4, 5, 11, 17]\n"
+      "Selected input nodes [1, 6, 11, 16, 21]\n"
      ]
     }
    ],
    "source": [
     "#Stimulus block is along the left wall\n",
     "#Find nodes close to x start\n",
-    "left = np.min(points,axis=1)\n",
-    "leftpoints = np.isclose(points[:,0],left[0])\n",
-    "simb = []\n",
+    "#left = np.min(points,axis=1)\n",
+    "#leftpoints = np.isclose(points[:,0],left[0])\n",
+    "#simb = []\n",
     "#Get the nodes that are on the left edge\n",
-    "for i,v in enumerate(leftpoints):\n",
-    "    if v:\n",
-    "        simb.append(i)       \n",
+    "# for i,v in enumerate(leftpoints):\n",
+    "#     if v:\n",
+    "#         simb.append(i)  \n",
+    "\n",
+    "simb = [1,6,11,16,21]\n",
+    "    \n",
     "print(\"Selected input nodes\",simb)"
    ]
   },
@@ -254,7 +261,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Anaconda3\\envs\\12L\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3516: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "composer.save(composer,r'D:\\12Labours\\GithubRepositories\\FTUUtils\\tests\\data\\Temp\\apncompositephs.pkl')\n",
+    "odepy = composer.exportAsPython()\n",
+    "with open(r'D:\\12Labours\\GithubRepositories\\FTUUtils\\tests\\data\\Temp\\apncompositephs.py','w') as apxp:\n",
+    "    print(odepy,file=apxp)\n",
+    "import sys\n",
+    "sys.exit(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Provide some project provenance information (optional)\n",
     "provenance = {\"Author\":\"JH\",\"Project\":\"FTU workflow demo\"}\n",
     "#Store codes to local directory\n",
-    "targetExptDirectory = 'data/Temp/FTUTest'\n",
+    "targetExptDirectory = 'data/Temp2/FTUTest'\n",
     "exptdesigned.generate(targetExptDirectory,provenance=provenance,defaultnetworkid=defaultNetworkId)\n",
     "#defaultNetworkId - corresponds to the network whose weights need to be used to generate the divergence operator\n",
     "#this operator will be used to generate divergence field of the Hamiltonian energy on the discrete graph at each time step"
@@ -363,56 +413,6 @@
    "metadata": {},
    "source": [
     "Below are the contents of the generated directory "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FTUTest/\n",
-      "    experimentdesign.json\n",
-      "    FTUStepper.py\n",
-      "    FTUStepper_test.py\n",
-      "    operators.npy\n",
-      "    runsimulations.py\n",
-      "    data/\n",
-      "    modelzoo/\n",
-      "        Hamlet4BN11.py\n",
-      "        Hamlet4BN17.py\n",
-      "        Hamlet4BN4.py\n",
-      "        Hamlet4BN5.py\n",
-      "        pysr_ham_map.json\n",
-      "    pysrcodes/\n",
-      "        FindExpressionFor_PHS_APN_Hamiltonian.py\n",
-      "        FindHamiltonianTo_Tai_Map.py\n",
-      "        FindHamiltonianTo_Ta_Map.py\n",
-      "        FindHamiltonianTo_u_Map.py\n",
-      "        FindHamiltonianTo_v_Map.py\n",
-      "        Neuman2DirichletOp.py\n",
-      "    pytorchcodes/\n",
-      "        FindHamiltonianTo_Tai_Map.py\n",
-      "        FindHamiltonianTo_Ta_Map.py\n",
-      "        FindHamiltonianTo_u_Map.py\n",
-      "        FindHamiltonianTo_v_Map.py\n",
-      "        Neuman2DirichletOp.py\n",
-      "        NeuralOp.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "for root, dirs, files in os.walk(targetExptDirectory):\n",
-    "    level = root.replace(targetExptDirectory, '').count(os.sep)\n",
-    "    indent = ' ' * 4 * (level)\n",
-    "    print('{}{}/'.format(indent, os.path.basename(root)))\n",
-    "    subindent = ' ' * 4 * (level + 1)\n",
-    "    for f in files:\n",
-    "        print('{}{}'.format(subindent, f))"
    ]
   }
  ],
